--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -8,7 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   background-image: url('../assets/img/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
