--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -29,6 +29,23 @@
   background-size: cover;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(62, 97, 43);
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @media screen and (max-width: 768px) {
 
   .main{
