--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -14,7 +14,7 @@
   align-items: center;
   height: auto;
   min-height: 100vh;
-  background-image: url('../assets/img/background.jpg');
+  background-image: url('@/assets/img/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
