- liste des blogs validés bug quand yen a pas - liens images coins achat coins - redirection url mail - logo fix

--- a/api/templates/reset_password.html.twig
+++ b/api/templates/reset_password.html.twig
@@ -32,7 +32,7 @@
     
     <p>Vous avez demandé la réinitialisation de votre mot de passe. Pour choisir un nouveau mot de passe, veuillez cliquer sur le lien ci-dessous :</p>
     
-    <p><a href="http://127.0.0.1:5173/reset-password/{{user.token}}" class="btn">Réinitialiser mon mot de passe</a></p>
+    <p><a href="https://challenge-jardinerie-final-alpha.vercel.app/reset-password/{{user.token}}" class="btn">Réinitialiser mon mot de passe</a></p>
     
     <p>Ce lien est valable 60 minutes. Passé ce délai, vous devrez de nouveau effectuer une demande de réinitialisation de mot de passe.</p>
     
