--- a/api/templates/confirmation_account.html.twig
+++ b/api/templates/confirmation_account.html.twig
@@ -32,7 +32,7 @@
     
     <p>Vous venez de créer un compte sur Jardinerie Online.</p>
     
-    <p><a href="http://127.0.0.1:5173/confirmation-account/{{user.tokenAccount}}" class="btn">Confirmer mon compte</a></p>
+    <p><a href="https://challenge-jardinerie-final-alpha.vercel.app/confirmation-account/{{user.tokenAccount}}" class="btn">Confirmer mon compte</a></p>
 
     <p>Si vous n'êtes pas à l'origine de cette demande, vous pouvez ignorer cet e-mail.</p>
 
